# PocketOptionAPI

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: api.html  codeblock.js  examples.html  faq.html  index.html  quickstart.html  style.css
examples/: call.py  check_order_result.py  check_win.py  get_active_orders.py  get_balance.py  get_candles.py  get_candles_dataframe.py  get_connection_stats.py  get_payouts.py  put.py  test_proxy_rotation.py
pocketoptionapi_async/: client.py  constants.py  websocket_client.py
src/: get_payouts.py
